Fix team part's responsive mode on iphones

--- a/css/style.css
+++ b/css/style.css
@@ -749,7 +749,7 @@ h6 {
 
     border-radius: 50%;
 
-    width: 100%;
+    width: 220px;
 
     height: 220px;
 
